==> SiliconLabs/third_party_hw_drivers_extension/driver/public/silabs/particulate_matter_sensor_sps30/src/sensirion_uart_hal.c <==
/*
 * Copyright (c) 2018, Sensirion AG
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * * Redistributions of source code must retain the above copyright notice, this
 *   list of conditions and the following disclaimer.
 *
 * * Redistributions in binary form must reproduce the above copyright notice,
 *   this list of conditions and the following disclaimer in the documentation
 *   and/or other materials provided with the distribution.
 *
 * * Neither the name of Sensirion AG nor the names of its
 *   contributors may be used to endorse or promote products derived from
 *   this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
 * ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
 * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
 * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
 * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
 * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
 * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 * POSSIBILITY OF SUCH DAMAGE.
 */

#include "sensirion_uart_hal.h"
#include "sl_status.h"
#include "sl_udelay.h"

static sl_iostream_t *s_iostream_handle = NULL;

/*
 * INSTRUCTIONS
 * ============
 *
 * Implement all functions where they are marked with TODO: implement
 * Follow the function specification in the comments.
 */

/**
 * Initialize all hard- and software components that are needed for the UART
 * communication.
 */
sl_status_t sensirion_uart_init(sl_iostream_t *iostream_handle)
{
  uint32_t stt = SL_STATUS_INVALID_PARAMETER;

  if (NULL != iostream_handle) {
    s_iostream_handle = iostream_handle;
    stt = SL_STATUS_OK;
  }
  return stt;
}

/**
 * sensirion_uart_select_port() - select the UART port index to use
 *                                THE IMPLEMENTATION IS OPTIONAL ON SINGLE-PORT
 *                                SETUPS (only one SPS30)
 *
 * Return:      SL_STATUS_OK on success, an error code otherwise
 */
sl_status_t sensirion_uart_select_port(uint8_t port)
{
  (void)port;
  return SL_STATUS_OK;
}

/**
 * sensirion_uart_open() - initialize UART
 *
 * Return:      SL_STATUS_OK on success, an error code otherwise
 */
sl_status_t sensirion_uart_open()
{
  return SL_STATUS_OK;
}

/**
 * sensirion_uart_close() - release UART resources
 *
 * Return:      SL_STATUS_OK on success, an error code otherwise
 */
sl_status_t sensirion_uart_close()
{
  // TODO: implement
  return SL_STATUS_OK;
}

/**
 * sensirion_uart_tx() - transmit data over UART
 *
 * @data_len:   number of bytes to send
 * @data:       data to send
 * @tx_bytes:   Actual number of bytes sent
 * @Return:     SL_STATUS_OK on success, an error code otherwise
 */
sl_status_t sensirion_uart_tx(uint16_t data_len,
                              const uint8_t *data,
                              uint16_t *tx_bytes)
{
  if ((NULL != data) && (NULL != s_iostream_handle)) {
    sl_status_t status = sl_iostream_write(s_iostream_handle,
                                           data,
                                           data_len);
    if (SL_STATUS_OK == status) {
      if (NULL != tx_bytes) {
        *tx_bytes = data_len;
      }
    }
    return status;
  }
  return SL_STATUS_INVALID_PARAMETER;
}

/**
 * sensirion_uart_rx() - receive data over UART
 *
 * @data_len:   max number of bytes to receive
 * @data:       Memory where received data is stored
 * @rx_bytes:   Actual number of bytes received
 * @Return:     SL_STATUS_OK on success, an error code otherwise
 */
sl_status_t sensirion_uart_rx(uint16_t max_data_len,
                              uint8_t *data,
                              uint16_t *rx_bytes)
{
  if ((NULL != data) && (NULL != s_iostream_handle)) {
    sl_status_t status = SL_STATUS_OK;
    size_t read_size;
    int32_t total_size = 0;

    while (max_data_len && (SL_STATUS_OK == status))
    {
      status = sl_iostream_read(s_iostream_handle,
                                data,
                                max_data_len,
                                &read_size);
      if (SL_STATUS_OK == status) {
        if (read_size > 0) {
          if (read_size <= max_data_len) {
            max_data_len -= read_size;
            data += read_size;
            total_size += read_size;
          } else {
            max_data_len = 0;
          }
        }
      }
    }

    if (NULL != rx_bytes) {
      *rx_bytes = total_size;
    }
    return SL_STATUS_OK;
  }
  return SL_STATUS_INVALID_PARAMETER;
}

/**
 * Sleep for a given number of microseconds. The function should delay the
 * execution for at least the given time, but may also sleep longer.
 *
 * Despite the unit, a <10 millisecond precision is sufficient.
 *
 * @param useconds the sleep time in microseconds
 */
void sensirion_sleep_usec(uint32_t useconds)
{
  sl_udelay_wait(useconds);
}
